--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,8 @@
             android:parentActivityName=".MainActivity"
             android:label="Join Room"/>
         <activity android:name=".Rooms"
-            android:label="Rooms"/>
+            android:label="Rooms"
+            android:parentActivityName=".JoinRoom"/>
     </application>
 
 </manifest>
